--- a/style.css
+++ b/style.css
@@ -111,3 +111,43 @@ ul {
     justify-content: center;
     gap: 10%;
 }
+
+.section2 {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    flex: 1;
+}
+
+.header2 {
+
+    display: flex;
+    justify-content: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    padding: 48px;
+}
+
+.square-container {
+    justify-content: center;
+    display: flex;
+    padding: 50px;
+    gap: 20px;
+
+
+}
+
+.square {
+    width: 200px;
+    height: 200px;
+    border: 2px solid #2e64bb;
+    padding: 8px;
+    border-radius: 7%;
+
+
+
+}
