--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ ul {
 
 }
 
-.square1, .square2, .square3, .square4 {
+/* .square1, .square2, .square3, .square4 {
     width: 200px;
     height: 200px;
     border: 2px solid #2e64bb;
@@ -151,4 +151,38 @@ ul {
 
 
 }
+ */
 
+.box2 {
+  
+    width: 125px;
+    height: 125px;
+    border: 5px solid #2e64bb;
+    padding: 8px;
+    border-radius: 7%;
+
+    
+    
+
+    
+}
+
+.text {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgba(43, 41, 41, 0.898); 
+    text-align: center;
+}
+
+
+.b1, .b2, .b3, .b4 {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+    flex: 1;
+    max-width: 175px;
+    padding: 20px;
+}
