--- a/style.css
+++ b/style.css
@@ -221,3 +221,80 @@ ul {
     color:rgba(34, 33, 33, 0.898)
     
 }
+
+.section4 {
+
+    display: flex;
+    flex-direction: column;
+    background:#ffffff;
+    margin: 50px;
+    padding: 30px;
+   
+}
+
+.r-box {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: #3882f6;
+    padding: 50px;
+    border-radius: 2%;
+    
+
+  
+
+}
+
+.things {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+ .left {
+
+    display: flex;
+    flex-direction: column;
+    margin-right: auto;
+    padding-left: 8%;
+
+}
+
+.l-main {
+
+    font-size: 24px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 800;
+    color: #f9faf8;
+
+}
+.l-sub {
+
+    font-size: 16px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color:#f9faf8;
+}
+
+.right {
+
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    width: 20%;
+    
+}
+
+button {
+    border: 1px solid white;
+    background-color: #3882f6;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    padding: 20px;
+    
+    
+}
