--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ ul {
     align-content: center;
     max-width: 800px; 
     align-self: center;
+    gap: 20px;
     
     
 }
@@ -218,7 +219,7 @@ ul {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 700;
     align-self: flex-end;
-    color:rgba(34, 33, 33, 0.898)
+    color:rgba(34, 33, 33, 0.898);
     
 }
 
@@ -250,7 +251,9 @@ ul {
 
     display: flex;
     justify-content: center;
+    align-content: center;
     align-items: center;
+    flex: 1;
     
 }
 
@@ -281,8 +284,8 @@ ul {
 .right {
 
     display: flex;
-    flex-direction: column;
-    align-self: center;
+
+    align-self: flex-start;
     width: 20%;
     
 }
