--- a/style.css
+++ b/style.css
@@ -301,3 +301,29 @@ button {
     
     
 }
+
+.footer {
+
+    background-color: #1f2937;
+    display: flex; 
+    padding: 36px;
+    justify-content: center;
+    margin-top: auto;
+
+
+}
+
+.bot-text {
+
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    color: white;
+
+
+}
+
+a {
+
+    text-decoration: none;
+    color: white;
+}
