--- a/style.css
+++ b/style.css
@@ -4,28 +4,34 @@ body {
     flex-direction: column;
     margin: 0;
    
+   
 }
 
 
 .section1 {
 
     display: flex; 
-    flex: 1;
+    align-items: stretch;
     flex-direction: column;
     padding: 20px;
     background-color: #1f2937;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    gap: 24px;
 }
 .header {
 
     display: flex;
     height: 72px;
   background: #1f2937;
+  align-content: center;
   
 
 
-  padding: 50px;
+  
+  padding-bottom: 20px;
+  margin-left: 40px;
   flex: 1;
+  padding-left: 7%;
  
   
 
@@ -38,7 +44,7 @@ body {
   color: #f9faf8;
 font-size: 24px;
 font-weight: 900;
-margin-right: auto;
+
 }
 
 
@@ -46,6 +52,8 @@ margin-right: auto;
 
     color: #e5e7eb;
     margin-left: auto;
+    align-self: center;
+    padding-right: 12%;
   
     
 }
@@ -79,25 +87,47 @@ ul {
 .hero-sub {
 
     font-size: 18px;
-    color: #e5e7eb
+    color: #e5e7eb;
+}
+
+.but {
+
+    
+    background-color:#3882f6;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    padding: 8px;
+    width: 100px;
+    border-radius: 10%;
+    border: none;
+    
+
 }
 
 .section1 .body-left{
 
-
+    display: flex;
+    flex-direction: column;
     max-width: 350px;
+    gap: 10px;
+    
 
 }
 
 .section1 .empty {
     display: flex;
     justify-content: center;
-    height: 250px;
+    margin-top: 18px;
+    padding-left: 20px;
+    height: 230px;
     width: 40%;
     background-color: gray;
     color: white;
     text-align: center;
     align-items: center;
+    align-content: center;
 
 
 
